working on Linking PR and workshop

--- a/src/Components/EmployeeProtal/Dashboard/Pages/Forms/PurchaseRequisition/Style.css
+++ b/src/Components/EmployeeProtal/Dashboard/Pages/Forms/PurchaseRequisition/Style.css
@@ -1,3 +1,9 @@
+.pr-grid {
+    display: grid;
+    grid-template-columns: 50fr 50fr;
+    grid-gap: 20px;
+}
+
 .purchase_requisition {
     padding: 0 20px;
     font-family: Poppins;
