--- a/src/Components/EmployeeProtal/Dashboard/Pages/Cash/Requests/Style.css
+++ b/src/Components/EmployeeProtal/Dashboard/Pages/Cash/Requests/Style.css
@@ -21,6 +21,19 @@
     transform: rotate(40deg);
 }
 
+.advance_cash_request .table tbody tr .attached_po {
+    position: absolute;
+    top: 13px;
+    right: -80px;
+    width: 200px;
+    text-align: center;
+    background-color: #089557;
+    opacity: .8;
+    font-size: 10px;
+    color: #fff;
+    transform: rotate(40deg);
+}
+
 .advance_cash_request .table tbody tr .attached_pr {
     position: absolute;
     top: 3px;
